[package]
name = "field"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
minifb = "0.28"
rustfft = "6.1"
realfft = "3.5.0"
apodize = "1.0"
chrono = "0.4"
rand = "0.9.1"
tracing = "0.1"
tracing-subscriber = "0.3"
num-complex = "0.4"
triple_buffer = "7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  
  # these two are required by IMMDevice::Activate...
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_Security",
  
  "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"